# SmartBuddy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude-plugin/: plugin.json
docs/: architecture-viz.html
docs/plans/: 2026-04-02-typescript-port.md
docs/specs/: 2026-04-02-typescript-port-design.md
engine/: __init__.py  actions.py  brain.py  council.py  decision.py  emotional_state.py  identity.py  perception.py  personality_evolution.py  rnn.py  server.py  species.py  speech.py  sprites.py  traits.py
hooks/: hooks.json  statusline.cjs
hooks-src/: on-prompt-submit.ts  on-tool-use.ts
scripts/: on-prompt-submit.sh  on-session-end.sh  on-session-start.sh  on-tool-use.sh
skills/buddy-card/: SKILL.md
src/: actions.ts  brain.ts  council.ts  decision.ts  emotional-state.ts  identity.ts  index.ts  math.ts  perception.ts  personality-evolution.ts  rnn.ts  species.ts  speech.ts  sprites.ts  traits.ts
tests/: actions.test.ts  brain.test.ts  council.test.ts  decision.test.ts  emotional-state.test.ts  identity.test.ts  integration.test.ts  math.test.ts  perception.test.ts  personality-evolution.test.ts  rnn.test.ts  species.test.ts  speech.test.ts  sprites.test.ts  test_actions.py  test_brain.py  test_council.py  test_decision.py  test_emotional_state.py  test_identity.py  test_integration.py  test_perception.py  test_personality_evolution.py  test_rnn.py  test_species.py  test_speech.py  test_sprites.py  test_traits.py  traits.test.ts
(+5 files in other folders)
